--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
+    "redux-form": "^8.2.6",
     "reselect": "^4.0.0"
   },
   "scripts": {
